{
    "name": "InputActions",
    "maps": [
        {
            "name": "Faucet",
            "id": "4fa5267d-fb10-44ba-9429-049292bb8479",
            "actions": [
                {
                    "name": "SpewWater",
                    "type": "Button",
                    "id": "3e6f1efe-c4ec-423f-b0ce-efeaec2227ef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpewBeer",
                    "type": "Button",
                    "id": "66120625-313e-41f8-9eb1-5602b26580b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpewBubbles",
                    "type": "Button",
                    "id": "88e65685-2f13-43bb-a37a-c25c6ca7f240",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "71e777cd-c84b-4212-9b3f-d706b7cab876",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubmitDrink",
                    "type": "Button",
                    "id": "1addb1dc-39bf-49c5-b131-4493e6a9085c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6216e8c3-231a-44fe-a213-1e9ab8c2dd37",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpewWater",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a737119e-c7fa-4380-8f64-756b7c9e48fb",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpewBeer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d2f9a5b-2d4a-46dc-9a4a-22256199ec08",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpewBubbles",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f25b8c0-7187-4bf9-bb87-630a21ba58a9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f97a6ef-7694-4828-a967-e0f9dc98ae0e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SubmitDrink",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameOver",
            "id": "cda04a26-2904-485d-b648-ab396c4b5bc3",
            "actions": [
                {
                    "name": "MainMenu",
                    "type": "Button",
                    "id": "2770143d-6ed3-4e1f-a487-496e0aa7e597",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd5d26fe-d42f-4c0d-b53a-29ff4841767b",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}